# toy-apl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: user-guide.md
examples/: avg.apl  chessbd.apl  factorial.apl  histo.apl  multdrill.apl  primes.apl
src/: apl.c  apl.h  aplio.c  editor.c  error.h  eval.c  function.c  lexer.c  linalg.c  syscmmd.c  token.c  token.h  utf8.c  utf8.h
tests/: catenate.apl  compress.apl  encode.apl  expand.apl  indexing.apl  inner-prod.apl  laminate.apl  outer-prod.apl  reduce.apl  reshape.apl  rotate.apl  scan.apl  transpose.apl
